Complete containerization implementation and framework enhancement
✅ CONTAINERIZATION COMPLETE:
- Multi-stage Dockerfile with Java 8 + Tomcat 7
- Docker Compose with health checks and volumes
- Automated deployment script (start-pebble-docker.sh)
- Complete deployment documentation

✅ FRAMEWORK ENHANCEMENT v2:
- Enhanced discovery guides with multi-architecture support
- Java runtime decision framework
- Implementation validation quality gates
- Container troubleshooting patterns
- Discovery process analysis with lessons learned

✅ COMPREHENSIVE DOCUMENTATION:
- Executive summary of framework validation
- Detailed implementation analysis
- Java 6 vs Java 8 implementation strategies
- Framework enhancement recommendations
- Complete containerization guide

🎯 READY FOR DEPLOYMENT:
Access: http://localhost:8080/pebble/ (username/password)
Command: ./start-pebble-docker.sh